apps/40-network/netvisor/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: networking
  labels:
    goldilocks.fairwinds.com/enabled: "true"
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
