apps/40-network/netvisor/base/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netvisor-server
spec:
  ports:
    - port: 60072
      targetPort: 60072
      name: http
  selector:
    app: netvisor-server
